# knowledge-graph

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CLI.md  STRUCTURE.md  USAGE.md
src/: __init__.py  config.py  embeddings.py  entity_extractor.py  example.py  graphrag.py  kg_builder.py  main.py  neo4j_store.py  pdf_processor.py  pdf_reader.py  qdrant_store.py  text_chunker.py
src/builders/: __init__.py  graphrag.py  kg_builder.py
src/cli/: main.py
src/config/: __init__.py  config.py  models.py
src/core/: __init__.py  embeddings.py  entity_extractor.py  logger.py
src/processors/: __init__.py  pdf_processor.py  pdf_reader.py
src/storage/: __init__.py  elasticsearch_store.py  neo4j_store.py  qdrant_store.py  redis_cache.py
